--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-twc": "^1.4.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@happy-dom/global-registrator": "^14.12.0",
+    "@testing-library/react": "^16.0.0",
+    "@types/bun": "latest",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "bun-types": "^1.1.12",
+    "clsx": "^2.1.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
-  }
+    "eslint-config-next": "14.2.3",
+    "happy-dom": "^14.12.0",
+    "msw": "^2.3.1",
+    "postcss": "^8",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.2",
+    "pretty-format": "^29.7.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  },
+  "module": "index.ts",
+  "type": "module"
 }
